apps/app-proxy/overlays/eks-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: eks-local-cap-app-proxy
  namespace: eks-local
spec:
  rules:
  - host: ad797f352d020450d98d64321a20b75b-56ab39089498edb3.elb.us-east-1.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
